@@ -78,7 +78,7 @@ modules.load('http')
 {{ http_config(cfg.network.tls,"doh_legacy") }}
 {% endif %}
 
-{% if cfg.network.proxy_protocol %}
+{% if cfg.network.proxy_protocol.enable %}
 -- network.proxy-protocol
 net.proxy_allowed({
 {% for item in cfg.network.proxy_protocol.allow %}
