@@ -22,15 +22,18 @@ https://www.knot-resolver.cz/documentation/v6.0.16/upgrading.html
   - /webmgmt
 - Renamed/moved options in the declarative configuration model (YAML). (!1672)
   - /cache/garbage-collector -> /cache/garbage-collector/enable
+  - /cache/prefetch/prediction -> /cache/prefetch/prediction/enable
   - /dns64: true|false -> /dns64/enable: true|false
   - /dns64/rev-ttl -> /dns64/reverse-ttl
   - /dnssec: true|false -> /dnssec/enable: true|false
   - /dnssec/keep-removed -> /dnssec/trust-anchors-keep-removed
   - /dnssec/trust-anchor-sentinel -> /dnssec/sentinel
   - /dnssec/trust-anchor-signal-query -> /dnssec/signal-query
+  - /logging/dnstap -> /logging/dnstap/enable
   - /logging/dnssec-bogus -> /dnssec/log-bogus
   - /monitoring/enabled -> /monitoring/metrics
   - /monitoring/graphite -> /monitoring/graphite/enable
+  - /network/proxy_protocol -> /network/proxy_protocol/enable
   - /network/tls/files-watchdog -> /network/tls/watchdog
   - /rate-limiting -> /rate-limiting/enable
 
